--- a/index.html
+++ b/index.html
@@ -4,46 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/000/349/270/original/vector-calculator-icon.jpg">
-    <script src= 
-    "https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.js"
-            integrity= 
-    "sha512-BbVEDjbqdN3Eow8+empLMrJlxXRj5nEitiCAK5A1pUr66+jLVejo3PmjIaucRnjlB0P9R3rBUs3g5jXc8ti+fQ=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"></script> 
-        <script src= 
-    "https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.min.js"
-            integrity= 
-    "sha512-iphNRh6dPbeuPGIrQbCdbBF/qcqadKWLa35YPVfMZMHBSI6PLJh1om2xCTWhpVpmUyb4IvVS9iYnnYMkleVXLA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"></script>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+DK+Uloopet:wght@100..400&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.0.1/math.min.js" integrity="sha512-B82WLflI1EQiR9sGbIV1ddGVvK4ghj1xjMShL7YvcOrHjX2qP72lHztT1DxBVPiz1aTR6mOUJbtwj06uadL2GA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 <body>
-    <div class = "Numbers">
-        <h1>Simple Calculator</h1>
-        <input type="text" id="result">
-        <br>
-        <button class = "num" value = "1" onclick = "dis('1')">1</button>
-        <button class = "num" value = "2" onclick = "dis('2')">2</button>
-        <button class = "num" value = "3" onclick = "dis('3')">3</button>
-        <button class="operators" id = "add" onclick = "dis(' + ')">+</button>
-        <br>
-        <button class = "num" value = "4" onclick = "dis('4')">4</button>
-        <button class = "num" value = "5" onclick = "dis('5')">5</button>
-        <button class = "num" value = "6" onclick = "dis('6')">6</button>
-        <button class="operators" id = "sub" onclick = "dis(' - ')">-</button>
-        <br>
-        <button class = "num" value = "7" onclick = "dis('7')">7</button>
-        <button class = "num" value = "8" onclick = "dis('8')">8</button>
-        <button class = "num" value = "9" onclick = "dis('9')">9</button>
-        <button class="operators" id = "mul" onclick = "dis(' * ')">*</button>
-        <br>
-        <button class = "num" value = "0" onclick = "dis('0')">0</button>
-        <button class = "num" id = "equal" onclick = "solve()">=</button>
-        <button class = "spe" id = "C" onclick = "clr()">C</button>
-        <button class="operators" id = "divi" onclick = "dis(' / ')">/</button>
+    <div class="calc-body">
+        <h1>Calculator</h1>
+        <div class="calc-input">
+            <input type="text" id="result">
+            <button class="num" onclick = "solve()">=</button>
+        </div>
+        <div class="calc-numbers">
+            <button class="num" value = "1" onclick = "display('1')">1</button>
+            <button class="num" value = "2" onclick = "display('2')">2</button>
+            <button class="num" value = "3" onclick = "display('3')">3</button><br/>
+            <button class="num" value = "4" onclick = "display('4')">4</button>
+            <button class="num" value = "5" onclick = "display('5')">5</button>
+            <button class="num" value = "6" onclick = "display('6')">6</button><br/>
+            <button class="num" value = "7" onclick = "display('7')">7</button>
+            <button class="num" value = "8" onclick = "display('8')">8</button>
+            <button class="num" value = "9" onclick = "display('9')">9</button><br/>
+            <button class="num" value = "0" onclick = "display('0')">0</button>
+            <button class="clear" value = "clear" onclick = "display('c')">Clear</button>
+        </div>
+        <div class="calc-operations">
+            <button class="operations" value = "+" onclick = "display('+')">+</button>
+            <button class="operations" value = "-" onclick = "display(' - ')">-</button>
+            <button class="operations" value = "*" onclick = "display(' * ')">*</button>
+            <button class="operations" value = "/" onclick = "display(' / ')">/</button>
+        </div>
     </div>
-    <script src = "test.js"></script>
+    <script src = "./test.js"></script>
 </body>
 </html>
