--- a/index.html
+++ b/index.html
@@ -15,31 +15,25 @@
 
 </head>
 <body>
+    <h1>Calculator</h1>
+    <input type="text" id="result">
     <div class="calc-body">
-        <h1>Calculator</h1>
-        <div class="calc-input">
-            <input type="text" id="result">
-            <button class="num" onclick = "solve()">=</button>
-        </div>
-        <div class="calc-numbers">
-            <button class="num" value = "1" onclick = "display('1')">1</button>
+            <button class="num" id = "no1" value = "1" onclick = "display('1')">1</button>
             <button class="num" value = "2" onclick = "display('2')">2</button>
-            <button class="num" value = "3" onclick = "display('3')">3</button><br/>
+            <button class="num" value = "3" onclick = "display('3')">3</button>
+            <button class="operations" value = "+" onclick = "display('+')">+</button>
             <button class="num" value = "4" onclick = "display('4')">4</button>
             <button class="num" value = "5" onclick = "display('5')">5</button>
-            <button class="num" value = "6" onclick = "display('6')">6</button><br/>
+            <button class="num" value = "6" onclick = "display('6')">6</button>
+            <button class="operations" value = "-" onclick = "display(' - ')">-</button>
             <button class="num" value = "7" onclick = "display('7')">7</button>
             <button class="num" value = "8" onclick = "display('8')">8</button>
-            <button class="num" value = "9" onclick = "display('9')">9</button><br/>
-            <button class="num" value = "0" onclick = "display('0')">0</button>
-            <button class="clear" value = "clear" onclick = "display('c')">Clear</button>
-        </div>
-        <div class="calc-operations">
-            <button class="operations" value = "+" onclick = "display('+')">+</button>
-            <button class="operations" value = "-" onclick = "display(' - ')">-</button>
+            <button class="num" value = "9" onclick = "display('9')">9</button>
             <button class="operations" value = "*" onclick = "display(' * ')">*</button>
+            <button class="num" value = "0" onclick = "display('0')">0</button>
+            <button class="clear" value = "clear" onclick = "display('c')">C</button>
             <button class="operations" value = "/" onclick = "display(' / ')">/</button>
-        </div>
+            <button class="num" onclick = "solve()">=</button>
     </div>
     <script src = "./test.js"></script>
 </body>
